# WSB_credit_project

./: Przetwarzanie_danych.py  README.md  db.sqlite3  manage.py  models__.py  pyproject.toml  requirements.txt  testy.py  worldcities.csv
capitals/: db.sqlite3  wsgi.py
capitals/capitals/: asgi.py  settings.py  urls.py
capitals/game/: admin.py  apps.py  controller.py  example.html  models.py  urls.py  views.py
capitals/game/migrations/: 0001_initial.py  0002_cities_countries.py  0002_rename_game_choice_question.py
capitals/game/static/game/: style.css
capitals/game/templates/game/: cc.html  cc_odp.html  cc_pyt.html  cities_odp.html  cities_pyt.html  countries_odp.html  countries_pyt.html  index.html  pyt_i_odp.html  pyt_i_odp2.html  save_history.html
capitals/game/templates/registration/: login.html  signup.html
capitals/question/: views.py
capitals/question/migrations/: 0001_initial.py
capitals_main/: asgi.py  settings.py  wsgi.py
game/: urls.py  views.py
game/migrations/: 0001_initial.py  0002_cities_countries.py  0003_authuser_history.py  0004_alter_history_correct_ans_alter_history_id_and_more.py
game/templates/game/: ankieta.html  cities_pyt.html  home.html  index.html  save_history.html
tools/: Przetwarzanie_danych.py  testy.py
