[tool.poetry]
name = "projekt-zaliczeniowy-wsb"
version = "0.1.0"
description = "My final WSB project - the game"
authors = ["Luk <lukasz.wypych19@gmail.com>"]
readme = "README.md"
packages = [{include = "projekt_zaliczeniowy_wsb"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
mysql-connector-python = "^8.0.33"
mysqlclient = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
