[tool.poetry]
name = "projekt-zaliczeniowy-wsb"
version = "0.1.0"
description = ""
authors = ["Luk <lukasz.wypych19@gmail.com>"]
readme = "README.md"
packages = [{include = "projekt_zaliczeniowy_wsb"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.2"
mysqlclient = "^2.1.1"
mysql-connector-python = "^8.0.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
